fixed mobile bug on collapsed menu

--- a/assets/scss/templates/_menu.scss
+++ b/assets/scss/templates/_menu.scss
@@ -77,6 +77,7 @@
       &.show {
         visibility: visible !important;
         opacity: 1 !important;
+        display: block;
       }
     }
   }
